<resources>
    <string name="app_name">Table</string>
    <string name="entrance">Вход</string>
    <string name="forgetPassword">Забыли пароль?</string>
    <string name="noAccount">Ещё нет аккаунта?</string>
    <string name="entry">Войти</string>
    <string name="email">E-mail</string>
    <string name="password">Password</string>
    <string name="dalee">Далее</string>
    <string name="textAboutForget">Укажите email, который вы использовали ранее при регистраци. На него придет 4-х значный код</string>
    <string name="PasswordRecovery">Восстановление пароля</string>
    <string name="Ready">Готово</string>
    <string name="name">Имя</string>
    <string name="surname">Фамилия</string>
    <string name="confirmPassword">ConfirmPassword</string>
    <string name="register">Регистрация</string>
    <string name="tellaboutyourself1">Расскажете о себе?)</string>
    <string name="tellaboutyourself2">Эту информацию можно будет изменить или дополнить после окончания регистрации</string>
    <string name="tellaboutyourself3">О себе</string>
    <string name="tellaboutyourself4">Расскажите о увлечениях, связанных с настольными играми, ДНД, ___</string>
    <string name="lovelygames1">Любимые игры</string>
    <string name="lovelygames2">Добавьте несколько любимых настолок</string>
    <string name="hashtags1">#хештеги</string>
    <string name="hashtags2">По ним вас будет проще найти другим людям</string>
    <string name="nazvanie">Название</string>
    <string name="kolichestvo">Количество участников</string>
    <string name="minimal">Минимальное</string>
    <string name="maximum">Максимальное</string>
    <string name="proverkakolichectva">За 3 дня до мероприятия мы автоматически проверим набралось ли нужное мин. количество человек, а также ограничим запросы на участие, если все уже найдены</string>
    <string name="kogda">Когда?</string>
    <string name="gorod">Город</string>
    <string name="mesto">Место проведения</string>
    <string name="metro">Ближайшие станции метро</string>
    <string name="opisanie">Описание</string>
    <string name="hint_opisanie"><font size="13">Расскажите, что планируется на встрече, какие игры, есть ли у встречи план, что важно знать участникам о наполнении мероприятия?</font></string>
    <string name="chat">Чат</string>
    <string name="hint_chat"><font size="13">Вставьте ссылку-приглашение в чат</font></string>
    <string name="detali">Детали</string>
    <string name="hint_detali"><font size="13">Расскажите как удобнее добираться до места, как с вами связаться, как будет производиться оплата, если она предусмотрена?</font></string>
    <string name="hint_hashtag">Чтобы мероприятие попадало в рекомендации и вы быстрее нашли близких по духу людей</string>
    <string name="create">Создать</string>
    <string name="title_activity_person_information">PersonInformation_activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="search">Поиск</string>
    <string name="Event">Событие</string>
    <string name="Profile">Профиль</string>
    <string name="Notifications">Уведомления</string>
    <string name="configuration_profile">Настройки аккаунта</string>
    <string name="personal_info">Личная информация</string>
    <string name="help">Помощь</string>
    <string name="last_events">Прошедшие мероприятия</string>
    <string name="experience_of_events">Опыт мероприятий</string>
    <string name="Organizator">Организатор: </string>
    <string name="uchastnik">Участник: </string>
    <string name="svyaz">Связь</string>
    <string name="elektron_adres">Электронный адрес</string>
    <string name="edit_personal">Редактирование личной информации</string>
    <string name="save">Сохранить</string>
    <string name="dont_show">Не показываем другим</string>
    <string name="take_part">Участвовать</string>
    <string name="already_take_part">уже участвуют</string>
    <string name="station_metro">Станция метро</string>
    <string name="details_event">Детали мероприятия</string>
    <string name="go_to_chat">Перейти в чат</string>
    <string name="example_number">16/20</string>
    <string name="cancel_participate">Отменить участие</string>
    <string name="notifications_nl">Входящие: </string>
    <string name="notification_txt">"Мафия" в антикафе 12 ярдов</string>
    <string name="notification_accept_btn">Принять</string>
    <string name="notification_reject_btn">Отклонить</string>
    <string name="notification_date_txt">16.11.2022</string>
    <string name="notification_time_txt">(17:00 - 22:00)</string>
    <string name="example_eventname_card_of_event">Мафия в антикафе 12 ярдов</string>
    <string name="example_date_card">16.11.23</string>
    <string name="example_people">15/20</string>
    <string name="example_time_card">(17:00-22:00)</string>
    <string name="example_metro">Парк Победы</string>
    <string name="sign_up">Записаться</string>
    <string name="notification_card">Детали мероприятия изменились,\nНужно будет подтвердить участие:</string>
    <string name="notification_card_accept">Принять изменения</string>
    <string name="notification_card_reject">Отменить участие</string>
    <string name="filter_txt">Настроить фильтр:</string>
    <string name="price_filter">Цена</string>
    <string name="filter_btn">Применить</string>
    <string-array name="sex_items">
        <item></item>
        <item>Женский</item>
        <item>Мужской</item>
    </string-array>
    <string-array name="cities_items">
        <item></item>
        <item>Москва</item>
        <item>Санкт-Петербург</item>
    </string-array>
    <string-array name="metro_items">
        <item></item>
        <item>Октябрьская</item>
        <item>Шаболовская</item>
        <item>Калужская</item>
        <item>Площадь Ильича</item>
        <item>Парк Победы</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>