<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_table">
    <ImageButton
        android:id="@+id/strelka3"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_strelka"
        android:src="@drawable/strelka_icon"
        >
    </ImageButton>

    <EditText
        android:id="@+id/register_email"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress">

    </EditText>
    <EditText
        android:id="@+id/register_name"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_above="@id/register_surname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/name"
        android:inputType="textPersonName">

    </EditText>
    <EditText
        android:id="@+id/register_surname"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_above="@id/register_email"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:textSize="18sp">

    </EditText>
    <EditText
        android:id="@+id/register_password"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edittext"
        android:layout_below="@id/register_email"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="18sp">

    </EditText>
    <EditText
        android:id="@+id/register_password_confirmation"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/confirmPassword"

        android:layout_below="@id/entryPassword"
        android:inputType="textPassword"
        android:textSize="18sp">


    </EditText>

    <Button
        android:id="@+id/register_done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/register_password_confirmation"
        android:layout_alignRight="@+id/register_password_confirmation"
        android:layout_marginVertical="20dp"
        android:background="@drawable/rounded_button"
        android:onClick="RegisterButtonClicked"
        android:text="@string/Ready"

        android:textColor="@color/darknotes"
        android:textAllCaps="false"
        />

    <TextView
        android:id="@+id/textRegister"
        android:layout_width="235dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/register"
        android:textColor="@color/darknotes"
        android:layout_above="@id/register_name"
        android:layout_marginVertical="20dp"
        android:layout_alignParentLeft="true"
        style="@style/HeadersText"
        android:background="@drawable/pink_rect"
        android:textSize="20dp"
        android:gravity="center"
        >


    </TextView>
</RelativeLayout>