<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_table">


    <EditText
        android:id="@+id/email"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="231dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        tools:ignore="TouchTargetSizeCheck"
        >

    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        tools:ignore="TouchTargetSizeCheck">

    </EditText>

    <TextView
        android:id="@+id/textVxod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/entrance"
        style="@style/HeadersText"
        android:textColor="@color/darknotes"

        android:layout_below="@id/strelka1"

        android:layout_marginTop="90dp"
        android:background="@drawable/pink_rect"

        android:gravity="center"
        >


    </TextView>

    <Button
        android:id="@+id/buttonVxod"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginVertical="20dp"
        android:background="@drawable/state_list_button"
        android:text="@string/entry"
        android:textColor="@color/darknotes"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp"
        android:clickable="true"
        android:textAllCaps="false"
        >
    </Button>

    <ImageButton

        android:id="@+id/strelka1"
        android:src="@drawable/strelka_icon"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_strelka"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck">

    </ImageButton>
    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgetPassword"
        android:layout_below="@id/buttonVxod"
        android:layout_alignLeft="@id/buttonVxod"
        android:textColor="@color/darknotes"
        android:textSize="11sp"
        android:layout_marginTop="10dp"
        >
    </TextView>
    <TextView
        android:id="@+id/noAcc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noAccount"
        android:layout_below="@id/buttonVxod"
        android:layout_alignRight="@id/buttonVxod"
        android:textColor="@color/darknotes"
        android:textSize="11sp"
        android:layout_marginTop="10dp"
        >
    </TextView>
</RelativeLayout>