<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/photoProfile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        android:layout_marginTop="40dp"
        android:background="@drawable/round_photo"
        >
    </ImageView>
    <TextView
        android:id="@+id/nameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/photoProfile"
        app:layout_constraintTop_toTopOf="@id/photoProfile"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="20dp"
        android:text="@string/name"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/darknotes"
        android:textSize="20sp"
        >
    </TextView>
    <TextView
        android:id="@+id/surnameProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/photoProfile"
        app:layout_constraintTop_toBottomOf="@id/nameProfile"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:text="@string/surname"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/darknotes"
        android:textSize="20sp"
        >
    </TextView>

    <TextView
        android:id="@+id/configurationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/photoProfile"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:text="@string/configuration_profile"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/darknotes"
        android:textSize="20sp"
        >
    </TextView>
    <Button
        android:id="@+id/button_personal_info"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/configurationTextView"
        android:layout_marginTop="25dp"
        android:text="@string/personal_info"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:background="@null"
        android:clickable="true"
        android:layout_marginLeft="48dp"
        >
    </Button>
    <Button
        android:id="@+id/button_notifications"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_personal_info"
        android:layout_marginTop="15dp"
        android:text="@string/Notifications"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:background="@null"
        android:clickable="true"
        android:layout_marginLeft="48dp"
        >
    </Button>
    <Button
        android:id="@+id/button_help"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_notifications"
        android:layout_marginTop="15dp"
        android:text="@string/help"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:background="@null"
        android:clickable="true"
        android:layout_marginLeft="48dp"
        >
    </Button>
    <TextView
        android:id="@+id/latEventsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_help"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:text="@string/last_events"
        android:fontFamily="@font/roboto_regular"
        android:textColor="@color/darknotes"
        android:textSize="20sp"
        >
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>


