<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        android:id="@+id/strelka"
        android:layout_width="43dp"
        android:layout_height="43dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/button_strelka"
        >
    </Button>

    <EditText
        android:id="@+id/email"
        android:layout_width="290dp"
        android:layout_height="45dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/email"
        android:inputType="textPassword">

    </EditText>
    <Button
        android:id="@+id/buttonDalee"
        android:layout_width="89dp"
        android:layout_height="39dp"
        android:layout_below="@id/email"
        android:layout_alignRight="@+id/email"
        android:layout_marginVertical="20dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/dalee"
        android:textColor="@color/darknotes"
        />
    <TextView
        android:id="@+id/textForget"
        android:layout_width="290dp"
        android:layout_height="wrap_content"
        android:text="@string/textAboutForget"
        android:layout_above="@id/email"
        android:layout_alignLeft="@id/email"
        android:textColor="@color/darknotes"

        >
    </TextView>
    <TextView
        android:id="@+id/texVostanovlenieParolya"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/PasswordRecovery"
        android:textColor="@color/darknotes"
        android:layout_above="@id/textForget"
        android:layout_marginVertical="20dp"
        android:layout_alignRight="@id/email"
        android:layout_alignParentLeft="true"
        style="@style/HeadersText"
        android:background="@drawable/pink_rect"
        android:textSize="20dp"
        android:gravity="center"
        >


    </TextView>

</RelativeLayout>